tests/kiama/negative/type_errors/L2/9_badcase4.ob
MODULE badcase;

VAR
    avar : INTEGER;

BEGIN
    CASE avar OF
        18 : avar := 3
      | avar + 1 .. avar + 10 : avar := 5
    END
END badcase.
